--- a/Th.Validator.Test/Th.Validator.Test.csproj
+++ b/Th.Validator.Test/Th.Validator.Test.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Th.Util.Common\Th.Util.Common.csproj" />
     <ProjectReference Include="..\Th.Validator\Th.Validator.csproj" />
   </ItemGroup>
 
