--- a/Th.Validator/Th.Validator.csproj
+++ b/Th.Validator/Th.Validator.csproj
@@ -1,7 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFrameworks>net45;netstandard2.0</TargetFrameworks>
+
+    <!--<TargetFramework>net45</TargetFramework>-->
+    <!--<TargetFramework>netstandard2.0</TargetFramework>-->
   </PropertyGroup>
 
   <ItemGroup>
